freelancer-k8s/minikube/1-gateway/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freeln-gateway
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: freeln-gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: freeln-gateway
    spec:
      containers:
        - name: freeln-gateway
          image: datz0512/freelancer-gateway:stable
          imagePullPolicy: Always
          resources:
            limits:
              cpu: '0.5'
              memory: '1Gi'
            requests:
              cpu: 100m
              memory: 150Mi
          ports:
            - name: gateway
              containerPort: 4000
